Fix width overflow of the Upload component
The width of the element ".zent-upload-container" is 760px but its' parent ".zent-upload" is max-width 75%, so when the screen is small, the element ".zent-upload-container" will overflow.

--- a/packages/zent/assets/upload.pcss
+++ b/packages/zent/assets/upload.pcss
@@ -50,7 +50,7 @@
 }
 
 .zent-upload-container {
-  width: 760px;
+  width: 100%;
   height: 480px;
   display: flex;
   flex-direction: column;
